--- a/Login/appsettings.json
+++ b/Login/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConexaoMySQL": "Server=localhost;port=3306;Database=login;user id=root;"
+  }
 }
